fix 3234 add overlay to menu
* ensure article header is still visible on article pages using a new z-index variable
* that z-index is calced from the site-header value
* this ensures the search box overlay still works as it does currently, covering the artcile header
* overlay is on ToC click and tested as click-away in both contexts: with and without an article header

--- a/site/gdocs/components/topic-page.scss
+++ b/site/gdocs/components/topic-page.scss
@@ -7,6 +7,7 @@
     background-color: $blue-10;
     color: $blue-90;
     margin-bottom: 48px;
+    z-index: $zindex-article-header;
 
     h1 {
         margin-bottom: 0;
